--- a/package.json
+++ b/package.json
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/erikakers/fluxy/issues"
   },
-  "homepage": "https://github.com/erikakers/fluxy"
+  "homepage": "https://github.com/erikakers/fluxy",
+  "devDependencies": {
+    "glob": "^4.0.6",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.1.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-react": "^0.10.0",
+    "jit-grunt": "^0.9.0",
+    "time-grunt": "^1.0.0"
+  }
 }
